Dodano metodę removeSector od ParkingFacade